Bugs with separate images #47378

Closed
opened 2016-02-10 00:11:03 +01:00 by Aaron Carlisle · 11 comments
Member

System Information
Windows 10
Intel HD 4600

Blender Version
Broken: 2.76.9
Worked: (optional)

Short description of error

There are two issues here and might be related.

  • Separate images Y
  • The UI is bad there needs to be a way to confirm the action e.g. and OK button
    Exact steps for others to reproduce the error
  • add video to vse
  • hit Y --> Nothing happens
  • UI of this tool is bad
**System Information** Windows 10 Intel HD 4600 **Blender Version** Broken: 2.76.9 Worked: (optional) **Short description of error** There are two issues here and might be related. - Separate images `Y` - The UI is bad there needs to be a way to confirm the action e.g. and OK button **Exact steps for others to reproduce the error** - add video to vse - hit `Y` --> Nothing happens - UI of this tool is bad
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Author
Member

Added subscriber: @DouglasEKnapp

Added subscriber: @DouglasEKnapp
Author
Member

Reported by @DouglasEKnapp

Reported by @DouglasEKnapp
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Julian Eisel self-assigned this 2016-02-10 00:25:01 +01:00
Member

Eeeck, indeed. Goes to my desk.

Eeeck, indeed. Goes to my desk.

This issue was referenced by 6767c61a9b

This issue was referenced by 6767c61a9b5d3fc445e84961eb287ec6f7541b32

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@JulianEisel, we're doing testbuild so figured we could just swap the callbacks to resolve.

Alternate fix would be to call WM_operator_props_popup_call but not really convinced the redo popup is that useful.

@JulianEisel, we're doing testbuild so figured we could just swap the callbacks to resolve. Alternate fix would be to call `WM_operator_props_popup_call` but not really convinced the redo popup is that useful.
Member

Yup, should be fine :)

Yup, should be fine :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47378
No description provided.