Fix T47378: Separate images popup UI does nothing

Use confirm popup instead of redo popup